# LIME-IEINN

./: README.md  pyproject.toml
example/: explain_inception_net_v3.ipynb
lime_ieinn/: base.py  explanation.py  tabular_explainer.py
lime_ieinn/example/: checkpoint.pt  explain_image.ipynb  explain_inception_net_v3.ipynb  explain_tabular.ipynb
lime_ieinn/ieinn/: __init__.py  ieinn.py  preprocessing_layer.py
lime_ieinn/lime_ieinn/: __init__.py  base.py  explanation.py  image_explainer.py  tabular_explainer.py  utility.py
lime_ieinn/lime_ieinn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lime_ieinn/lime_ieinn/ieinn/: ieinn.py  output_layer.py  preprocessing_layer.py
