[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lime_ieinn"
version = "0.1"
description = "LIME+IEINN"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "numpy",
  "scikit-learn",
  "scikit-image"
]

[tool.setuptools.packages.find]
where = ["."]